Fix: last segment behind footer

--- a/public/css/sass/cattool.scss
+++ b/public/css/sass/cattool.scss
@@ -34,7 +34,7 @@ body.cattool {
 	background-color: #fafafa;
 	padding: 0 12px 0 14px;
 	width: 100%;
-	position: relative;
+	position: fixed;
 	bottom: 0;
 	left: 0;
 	z-index: 2;
